--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
-  "name": "tingvision-frontend",
-  "version": "1.0.0",
-  "description": "Front end for CCTV footage",
+  "name": "tutorial1",
+  "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.17.0",
+    "@mui/material": "^5.11.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "express": "^5.1.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^9.15.0",
+    "hls.js": "^1.6.13",
+    "http": "^0.0.1-security",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^2.0.0",
+    "react-icons": "^4.4.0",
+    "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "rtsp-relay": "^1.9.0",
+    "sheetjs-style": "^0.15.8",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.18.3",
+    "zustand": "^4.0.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && firebase deploy",
-    "deploy:hosting": "npm run build && firebase deploy --only hosting",
-    "deploy:functions": "firebase deploy --only functions",
-    "serve": "npm run build && serve -s build"
+    "eject": "react-scripts eject"
   },
-  "keywords": [
-    "wildlife",
-    "sightings",
-    "firebase",
-    "react",
-    "rtsp",
-    "camera",
-    "monitoring"
-  ],
-  "author": "TingVision Team",
-  "license": "ISC",
-  "dependencies": {
-    "firebase": "^12.4.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4",
-    "react-scripts": "^5.0.1",
-    "zustand": "^5.0.8"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -43,5 +54,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
+  },
+  "browser": {
+    "http": false,
+    "https": false
   }
 }
