Add sighting modal and Ting Vision branding updates

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FB Video Earnings Calculator",
-  "name": "FB Video Earnings Calculator",
+  "short_name": "Ting Vision",
+  "name": "Ting Vision",
   "icons": [
     {
       "src": "favicon.ico",
