--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-virtualized": "^9.22.6",
     "rtsp-relay": "^1.9.0",
     "sheetjs-style": "^0.15.8",
     "web-vitals": "^2.1.4",
